--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,30 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="red">#FF0000</color>
+    <color name="blue_profile">#6100FF</color>
+    <color name="greyish_black">#1C1C1C</color>
+    <color name="dark_gray">#292828</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey_text_color">#808080</color>
+    <color name="light_yellowish">#FF6200EE</color>
+    <color name="pinky_bg">#3a1d5d</color>
+    <color name="rb1">#FAF000</color>
+    <color name="rb2">#FFB45A</color>
+    <color name="rb3">#B4FAEB</color>
+    <color name="rb4">#3214FA</color>
+    <color name="rb5">#14FA64</color>
+    <color name="rb6">#14FAFA</color>
+    <color name="rb7">#B9FA00</color>
+    <color name="rb8">#FA28C8</color>
+    <color name="rb9">#FF6E0A</color>
+    <color name="rb10">#00BEB9</color>
+    <color name="rb11">#1E6EFA</color>
+    <color name="rb12">#FA6E78</color>
+    <color name="rb13">#C3007D</color>
+    <color name="rb14">#EF4444</color>
+    <color name="rb15">#C8C8D7</color>
+    <color name="rb16">#7C7373</color>
+    <color name="sceneview">#FF7818a0</color>
+    <color name="translucent">#3F000000</color>
 </resources>
